# transcriber

./: .env.example  .gitignore  CODE_DOCUMENTATION.md  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  LICENSE  LaunchTranscriber.bat  LaunchTranscriber.sh  README.md  RELEASE_NOTES.md  SOCIAL_MEDIA.md  pyproject.toml  seed-prompt.md
integrations/linux/: install_nautilus_script.sh  transcribe-audio.desktop  transcribe-audio.sh  uninstall_nautilus_script.sh
integrations/macos/: README.md  transcribe-audio-quick-action.sh
integrations/windows/: install_context_menu.bat  transcribe_cli.bat  uninstall_context_menu.bat
scripts/: setup.ps1  setup.sh
src/transcriber/: __init__.py
src/transcriber/cli/: main.py
src/transcriber/core/: __init__.py  audio.py  chunking.py  engine.py  groq_client.py  logging_utils.py  models.py  settings.py
src/transcriber/web/: app.py
src/transcriber/web/static/: index.html  style.css
tests/: conftest.py  helpers.py  test_chunking.py  test_cli.py  test_engine.py  test_settings.py  test_web_api.py
